src/objects/ContractProduct__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>ContractProducts</relationshipLabel>
        <relationshipName>ContractProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewPrice__c</fullName>
        <label>NewPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ContractProducts</relationshipLabel>
        <relationshipName>ContractProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ContractProduct</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ContractProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContractProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>